Change the style a little bit

--- a/index.html
+++ b/index.html
@@ -23,8 +23,13 @@
 </head>
 
 <body>
-	<h1>Bussikorttilaskuri</h1>
-	<a href="http://joukkoliikenne.tampere.fi/fi/matkustaminen/hinnat.html" target="_blank">TKL hinnasto</a><br><br>
+	<div class="container">	
+		<div class="page-header">
+			<h1>Bussikorttilaskuri</h1>
+			<p class="lead"><a href="http://joukkoliikenne.tampere.fi/fi/matkustaminen/hinnat.html" target="_blank">TKL hinnasto</a></p>
+		</div>
+
+	<br><br>
 	
 	
 	<form>
